--- a/Android/FbPost/app/src/main/res/layout/activity_main.xml
+++ b/Android/FbPost/app/src/main/res/layout/activity_main.xml
@@ -148,7 +148,6 @@
             android:scaleType="centerCrop"
             android:src="@drawable/ic_play"
             android:layout_centerInParent="true"
-            android:layout_centerVertical="true"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -211,6 +210,7 @@
                 />
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="30dp"
@@ -239,27 +239,21 @@
                 android:text="10K View"
                 android:textColor="#000"
                 />
-
-
         </LinearLayout>
-
-
-
-
-
     </LinearLayout>
-
-
-
-
-
 </LinearLayout>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        android:layout_marginBottom="2dp"
+        />
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="5dp"
     android:layout_marginEnd="5dp"
+    android:gravity="start"
     android:weightSum="3"
     >
     <LinearLayout
@@ -296,6 +290,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="end"
 
         android:layout_weight="1">
         <ImageView
